IE11 - Fix <hr> alignment

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -33,6 +33,11 @@ hr {
 	}
 }
 
+.section hr.small {
+	margin-left: 0;
+	margin-right: auto;
+}
+
 ul.checkmarks {
 	list-style: none;
 	margin-left: 0;
